--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>Documentation</p>
                 </li>
             </ul>
-            <ul>
+            <ul class="spacing">
                 <li>
                     <i>-</i>
                     <p>Settings</p>
@@ -65,14 +65,18 @@
     </div>
     <main>
         <header class="header">
-            <h1>Overview</h1>
-            <div class="icons">
-                <i>ic</i>
-                <i>ic</i>
+            <div class="header-left">
+                <h1>Overview</h1>
             </div>
-            <p class="username">User Name</p>
-            <div class="user-img">
-                <img src="" alt="">
+            <div class="header-right">
+                <div class="icons">
+                    <i>ic</i>
+                    <i>ic</i>
+                </div>
+                <p class="username">John Smith</p>
+                <div class="user-img">
+                    <img src="./img/user.png" alt="User image" width="50px">
+                </div>
             </div>
         </header>
 
@@ -97,8 +101,8 @@
 
         <div class="graph-container">
             <div class="graph">
-                <p class="graph-title">Today's stats</p>
-                <img src="" alt="">
+                <h3 class="graph-title">Today's stats</h3>
+                <img src="./img/chart.svg" alt="Chart">
             </div>
             <div class="stats-container">
                 <div class="stats-item">
@@ -127,23 +131,23 @@
                         <h2>Unresolved Tickets</h2>
                         <a href="#">View details</a>
                     </div>
-                    <p>Group: <span>Support</span></p>
+                    <p class="grey">Group: <span class="dark">Support</span></p>
                 </div>
                 <div class="item-info">
                     <p>Waiting on feature request</p>
-                    <p></p>
+                    <p class="grey">767</p>
                 </div>
                 <div class="item-info">
                     <p>Awaiting for customer response</p>
-                    <p></p>
+                    <p class="grey">563</p>
                 </div>
                 <div class="item-info">
                     <p>Awaiting developer fix</p>
-                    <p></p>
+                    <p class="grey">813</p>
                 </div>
                 <div class="item-info">
                     <p>Pending</p>
-                    <p></p>
+                    <p class="grey">293</p>
                 </div>
             </div>
             <div class="data-item">
@@ -152,23 +156,23 @@
                         <h2>Pending Tasks</h2>
                         <a href="#">View all</a>
                     </div>
-                    <p>Today</p>
+                    <p class="grey">Today</p>
                 </div>
                 <div class="item-info">
                     <p>Answer pending ticket</p>
-                    <p class="status">Urgent</p>
+                    <p class="status urgent">Urgent</p>
                 </div>
                 <div class="item-info">
                     <p>Create new ticket</p>
-                    <p class="status">New</p>
+                    <p class="status new">New</p>
                 </div>
                 <div class="item-info">
                     <p>Update ticket status</p>
-                    <p class="status">Default</p>
+                    <p class="status default">Default</p>
                 </div>
                 <div class="item-info">
                     <p>Close answered ticket</p>
-                    <p class="status">Assigned</p>
+                    <p class="status assigned">Assigned</p>
                 </div>
             </div>
         </div>
